# everlight-api

./: .env.example  .env.local  .gcloudignore  .gitignore  FINAL_TEST_RESULTS.md  MIGRATION_SUMMARY.md  NOTION_INTEGRATION_SUMMARY.md  README.md  README_TESTS.md  TEST_SUMMARY.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_db_connection.py
.claude/: settings.local.json
alembic/: env.py  script.py.mako
alembic/versions/: 37b999062857_remove_slate_table_and_add_brief_table.py  575932ee04ce_add_webhook_tokens_table.py  5990ba2f0920_integrationtoken_add_webhook_primary_id.py  78646f6340aa_add_integration_tokens_table.py  8e81569715dd_add_source_id_to_raw_entries.py  a4a99d5d398b_everything_up_to_this_point.py  aa16a57fab93_remove_webhook_tokens_table.py  e9946f283b94_support_multi_workspace_notion_.py
api/: brief_endpoints.py  integration_endpoints.py  journal_endpoints.py
auth/: user_auth.py
db/: embedding.py  models.py  session.py
examples/: example_notion_page_raw_entry.json
integrations/: gmail_importer.py  messaging.py  notion_importer.py
scripts/: test_notion_oauth.py
tests/: conftest.py  test_journal_endpoints.py  test_journal_postgresql.py  test_journal_simple.py  test_notion_integration.py  test_notion_messaging.py  test_runner.py
